--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+elasticsearch==5.3.0
 nltk==3.2.2
 numpy==1.12.1
 pandas==0.19.2
 python-dateutil==2.6.0
 pytz==2017.2
+requests==2.13.0
 scikit-learn==0.18.1
 scipy==0.19.0
 six==1.10.0
 sklearn==0.0
+urllib3==1.21
+vaderSentiment==2.5
